--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <resources>
 
     <!-- Base application theme. -->
@@ -5,5 +6,12 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
+    <style name="LightTheme" parent="AppTheme">
+        <item name="launchImage">@drawable/launch_screen_light</item>
+      </style>
 
+      <!-- Add this -->
+      <style name="DarkTheme" parent="AppTheme">
+        <item name="launchImage">@drawable/launch_screen_dark</item>
+      </style>
 </resources>
